# paoplayer

./: .gitignore  README.md  build.sh
music_widget_base/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Lexer.cpp  Lexer.h  MusicStateEnum.h  PaConnector.cpp  PaConnector.h  SongController.cpp  SongController.h  paop_config.h
music_widget_cli/: CMakeLists.txt  main.cpp
music_widget_cli/lib/: OP_MASKS.h
pao_player_base/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  PaConnector.cpp  PaConnector.h  SongController.cpp  SongController.h
pao_player_cli/: CMakeLists.txt  main.cpp
pao_player_cli/.cache/clangd/index/: OP_MASKS.h.7340D4879057FE69.idx  OP_MASKS.h.BB0126218F33B7E8.idx  main.cpp.2A66C9FD8AEB23B8.idx  main.cpp.81D762E68E3F757C.idx
pao_player_cli/lib/: OP_MASKS.h
